First working version

--- a/package.json
+++ b/package.json
@@ -86,13 +86,18 @@
 							},
 							"xsdbpath": {
 								"type": "string",
-								"description": "Path to the xsdb executable or the command if in PATH",
+								"description": "Path to the xsdb/xsct executable or the command if in PATH",
 								"default": "xsdb"
 							},
 							"xsdb_target_filter": {
 								"type": "string",
 								"description": "Filter to use when listing targets (for example: {name =~\"core*\"})",
 								"default": ""
+							},
+							"symbol_mapper" : {
+								"type" : "string",
+								"description": "Path to a symbol mapper from address to file/line. $1 is replaced with the ELF file in the command and $2 is replaced by the hexadecimal address to look for (typically, \"addr2line\")",
+								"default": "addr2line -e $1 -fC $2"
 							},
 							"env": {
 								"type": "object",
