--- a/package.json
+++ b/package.json
@@ -1,214 +1,229 @@
 {
-	"name": "xsdb-debug",
-	"displayName": "XSDB Debug",
-	"description": "XSDB Debugger support for VSCode",
-	"keywords": [
-		"xsdb",
-		"remote",
-		"debug"
-	],
-	"license": "GPL3",
-	"version": "0.11.0",
-	"publisher": "X-Ryl669",
-	"icon": "images/icon.png",
-	"engines": {
-		"vscode": "^1.55.0"
-	},
-	"main": "./out/src/frontend/extension",
-	"activationEvents": [
-	],
-	"categories": [
-		"Debuggers"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/X-Ryl669/XSDB-dbg.git"
-	},
-	"capabilities": {
-		"untrustedWorkspaces": {
-			"supported": true
-		}
-	},
-	"contributes": {
-		"breakpoints": [
-			{
-				"language": "c"
-			},
-			{
-				"language": "cpp"
-			}
-		],
-		"debuggers": [
-			{
-				"type": "xsdb",
-				"program": "./out/src/xsdb.js",
-				"runtime": "node",
-				"label": "XSDB",
-				"languages": [
-					"c",
-					"cpp"
-				],
-				"variables": {
-					"FileBasenameNoExt": "code-debug.getFileBasenameNoExt",
-					"FileNameNoExt": "code-debug.getFileNameNoExt"
-				},
-				"configurationAttributes": {
-					"launch": {
-						"required": [
-							"target",
-							"cwd"
-						],
-						"properties": {
-							"target": {
-								"type": "string",
-								"description": "Path to work dir"
-							},
-							"arguments": {
-								"type": "string",
-								"description": "Arguments to append after the executable. You can also use pipes."
-							},
-							"terminal": {
-								"type": "string",
-								"description": "Leave this field undefined to keep program output in the vscode console at the bottom. If this is set to empty string the program will spawn in a new console using x-terminal-emulator on linux, otherwise with the specified terminal. On windows setting this to an empty string spawns the program in a console, but no other console is supported."
-							},
-							"cwd": {
-								"type": "string",
-								"description": "project path"
-							},
-							"xsdbpath": {
-								"type": "string",
-								"description": "Path to the xsdb/xsct executable or the command if in PATH",
-								"default": "xsdb"
-							},
-							"xsdb_target_filter": {
-								"type": "string",
-								"description": "Filter to use when listing targets (for example: {name =~\"core*\"})",
-								"default": ""
-							},
-							"symbol_mapper": {
-								"type": "string",
-								"description": "Path to a symbol mapper from address to file/line. $1 is replaced with the ELF file in the command and $2 is replaced by the hexadecimal address to look for (typically, \"addr2line\")",
-								"default": "addr2line -e $1 -fC $2"
-							},
-							"env": {
-								"type": "object",
-								"description": "Environment overriding the xsdb (and in turn also the process) environment",
-								"default": null
-							},
-							"debugger_args": {
-								"type": "array",
-								"description": "Additional arguments to pass to XSDB",
-								"default": []
-							},
-							"pathSubstitutions": {
-								"type": "object",
-								"description": "Help XSDB find your source using path substitutions (XSDB `substitute-path)` variable",
-								"default": {
-									"<fromPath>": "<toPath>"
-								}
-							},
-							"valuesFormatting": {
-								"type": "string",
-								"description": "Set the way of showing variable values. 'disabled' - show value as is, 'parseText' - parse debuggers output text into structure, 'prettyPrinters' - enable debuggers custom pretty-printers if there are any",
-								"default": "parseText",
-								"enum": [
-									"disabled",
-									"parseText",
-									"prettyPrinters"
-								]
-							},
-							"printCalls": {
-								"type": "boolean",
-								"description": "Prints all XSDB calls to the console",
-								"default": false
-							},
-							"showDevDebugOutput": {
-								"type": "boolean",
-								"description": "Prints all XSDB responses to the console",
-								"default": false
-							},
-							"autorun": {
-								"type": "array",
-								"description": "XSDB commands to run when starting to debug",
-								"default": []
-							},
-							"stopAtEntry": {
-								"type": [
-									"boolean",
-									"string"
-								],
-								"description": "Whether debugger should stop at application entry point",
-								"default": false
-							}
-						}
-					}
-				},
-				"initialConfigurations": [
-					{
-						"name": "Debug",
-						"type": "xsdb",
-						"request": "launch",
-						"target": "ip/aie/Work",
-						"cwd": "${workspaceRoot}",
-						"valuesFormatting": "parseText"
-					}
-				],
-				"configurationSnippets": [
-					{
-						"label": "XSDB: Launch Program",
-						"description": "Starts the program using xsdb",
-						"body": {
-							"type": "xsdb",
-							"request": "launch",
-							"name": "${2:Launch Program}",
-							"target": "${1:ip/aie/Work}",
-							"cwd": "^\"\\${workspaceRoot}\"",
-							"valuesFormatting": "parseText"
-						}
-					}
-				]
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "tsc -p ./",
-		"test": "mocha",
-		"coverage": "nyc npm test",
-		"compile": "tsc -watch -p ./",
-		"lint": "eslint . --ext .ts --format compact",
-		"lint-and-fix": "eslint . --ext .ts --fix --format compact",
-		"spellcheck-docs": "cspell lint **/*.md",
-		"lint-docs": "markdownlint **/*.md",
-		"link-check": "markdown-link-check *.md",
-		"prettier-write-docs": "prettier --write **/*.md",
-		"prettier-check-docs": "prettier --check **/*.md"
-	},
-	"dependencies": {
-		"@vscode/debugadapter": "^1.59.0",
-		"ssh2": "^1.6.0"
-	},
-	"devDependencies": {
-		"@istanbuljs/nyc-config-typescript": "^1.0.2",
-		"@types/mocha": "^5.2.6",
-		"@types/node": "^11.11.3",
-		"@types/vscode": "^1.55.0",
-		"@typescript-eslint/eslint-plugin": "^5.22.0",
-		"@typescript-eslint/parser": "^5.22.0",
-		"cspell": "^6.0.0",
-		"eslint": "^8.14.0",
-		"eslint-plugin-deprecation": "^1.3.2",
-		"eslint-plugin-no-null": "^1.0.2",
-		"markdown-link-check": "^3.10.3",
-		"markdownlint-cli": "^0.31.1",
-		"mocha": "^9.2.2",
-		"nyc": "^15.1.0",
-		"prettier": "^2.6.2",
-		"ts-node": "^10.8.0",
-		"typescript": "^3.9.3"
-	},
-	"__metadata": {
-		"id": "2fd22b8e-b3b8-4e7f-9a28-a5e2d1bdd0d4",
-		"publisherDisplayName": "X-Ryl669",
-		"publisherId": "e054f80a-50f9-4d80-85c8-6ff87eef6c35"
-	}
+    "name": "xsdb-debug",
+    "displayName":  "XSDB Debug",
+    "description":  "XSDB Debugger support for VSCode",
+    "keywords": [
+        "xsdb",
+        "remote",
+        "debug"
+    ],
+    "license":  "GPL3",
+    "version":  "0.12.0",
+    "publisher": "X-Ryl669",
+    "icon": "images/icon.png",
+    "engines":  {
+        "vscode":   "^1.55.0"
+    },
+    "main": "./out/src/frontend/extension",
+    "activationEvents": [
+        "onDebug",
+        "onUri",
+        "onStartupFinished",
+        "onCommand:xsdb.attach",
+        "onCommand:xsdb.commandPrompt", 
+        "onCommand:XSDB-dbg.examineMemoryLocation",
+        "onCommand:XSDB-dbg.getFileNameNoExt",
+        "onCommand:XSDB-dbg.getFileBasenameNoExt"
+    ],
+    "categories": [
+        "Debuggers"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/X-Ryl669/XSDB-dbg.git"
+    },
+    "capabilities": {
+        "untrustedWorkspaces": {
+            "supported":    true
+        }
+    },
+    "contributes":  {
+        "commands": [
+            {
+                "command": "XSDB-dbg.examineMemoryLocation",
+                "title": "XSDB-dbg: Examine memory location"
+            }
+        ],
+        "breakpoints": [
+            {
+                "language": "c"
+            },
+            {
+                "language": "cpp"
+            }
+        ],
+        "debuggers": [
+            {
+                "type": "xsdb",
+                "program": "./out/src/xsdb.js",
+                "runtime": "node",
+                "label": "XSDB",
+                "languages": [
+                    "c",
+                    "cpp"
+                ],
+                "variables": {
+                    "FileBasenameNoExt": "XSDB-dbg.getFileBasenameNoExt",
+                    "FileNameNoExt": "XSDB-dbg.getFileNameNoExt"
+                },
+                "configurationAttributes": {
+                    "launch": {
+                        "required": [
+                            "target",
+                            "cwd"
+                        ],
+                        "properties":   {
+                            "target": {
+                                "type": "string",
+                                "description": "Path to work dir"
+                            },
+                            "arguments":    {
+                                "type": "string",
+                                "description": "Arguments to append after the executable. You can also use pipes."
+                            },
+                            "terminal": {
+                                "type": "string",
+                                "description": "Leave this field undefined to keep program output in the vscode console at the bottom. If this is set to empty string the program will spawn in a new console using x-terminal-emulator on linux, otherwise with the specified terminal. On windows setting this to an empty string spawns the program in a console, but no other console is supported."
+                            },
+                            "cwd": {
+                                "type": "string",
+                                "description": "project path"
+                            },
+                            "xsdbpath": {
+                                "type": "string",
+                                "description": "Path to the xsdb/xsct executable or the command if in PATH",
+                                "default": "xsdb"
+                            },
+                            "xsdb_target_filter": {
+                                "type": "string",
+                                "description": "Filter to use when listing targets (for example: {name =~\"core*\"})",
+                                "default": ""
+                            },
+                            "symbol_mapper":    {
+                                "type": "string",
+                                "description": "Path to a symbol mapper from address to file/line. $1 is replaced with the ELF file in the command and $2 is replaced by the hexadecimal address to look for (typically, \"addr2line\")",
+                                "default": "addr2line -e $1 -fC $2"
+                            },
+                            "env": {
+                                "type": "object",
+                                "description": "Environment overriding the xsdb (and in turn also the process) environment",
+                                "default": null
+                            },
+                            "debugger_args":    {
+                                "type": "array",
+                                "description": "Additional arguments to pass to XSDB",
+                                "default": []
+                            },
+                            "pathSubstitutions":    {
+                                "type": "object",
+                                "description": "Help XSDB find your source using path substitutions (XSDB `substitute-path)` variable",
+                                "default": {
+                                    "<fromPath>": "<toPath>"
+                                }
+                            },
+                            "valuesFormatting": {
+                                "type": "string",
+                                "description": "Set the way of showing variable values. 'disabled' - show value as is, 'parseText' - parse debuggers output text into structure, 'prettyPrinters' - enable debuggers custom pretty-printers if there are any",
+                                "default": "parseText",
+                                "enum": [
+                                    "disabled",
+                                    "parseText",
+                                    "prettyPrinters"
+                                ]
+                            },
+                            "printCalls": {
+                                "type": "boolean",
+                                "description": "Prints all XSDB calls to the console",
+                                "default": false
+                            },
+                            "showDevDebugOutput": {
+                                "type": "boolean",
+                                "description": "Prints all XSDB responses to the console",
+                                "default": false
+                            },
+                            "autorun": {
+                                "type": "array",
+                                "description": "XSDB commands to run when starting to debug",
+                                "default": []
+                            },
+                            "stopAtEntry": {
+                                "type": [
+                                    "boolean",
+                                    "string"
+                                ],
+                                "description": "Whether debugger should stop at application entry point",
+                                "default": false
+                            }
+                        }
+                    }
+                },
+                "initialConfigurations": [
+                    {
+                        "name": "Debug",
+                        "type": "xsdb",
+                        "request": "launch",
+                        "target":   "ip/aie/Work",
+                        "cwd": "${workspaceRoot}",
+                        "valuesFormatting": "parseText"
+                    }
+                ],
+                "configurationSnippets": [
+                    {
+                        "label": "XSDB: Launch Program",
+                        "description": "Starts the program using xsdb",
+                        "body": {
+                            "type": "xsdb",
+                            "request": "launch",
+                            "name": "${2:Launch Program}",
+                            "target": "${1:ip/aie/Work}",
+                            "cwd": "^\"\\${workspaceRoot}\"",
+                            "valuesFormatting": "parseText"
+                        }
+                    }
+                ]
+            }
+        ]
+    },
+    "scripts":  {
+        "vscode:prepublish": "tsc -p ./",
+        "test": "mocha",
+        "coverage": "nyc npm test",
+        "compile": "tsc -watch -p ./",
+        "lint": "eslint . --ext .ts --format compact",
+        "lint-and-fix": "eslint . --ext .ts --fix --format compact",
+        "spellcheck-docs": "cspell lint **/*.md",
+        "lint-docs": "markdownlint **/*.md",
+        "link-check":   "markdown-link-check *.md",
+        "prettier-write-docs": "prettier --write **/*.md",
+        "prettier-check-docs": "prettier --check **/*.md"
+    },
+    "dependencies": {
+        "@vscode/debugadapter": "^1.59.0",
+        "@vscode/debugprotocol": "^1.59.0",
+        "ssh2": "^1.6.0"
+    },
+    "devDependencies":  {
+        "@istanbuljs/nyc-config-typescript": "^1.0.2",
+        "@types/mocha": "^5.2.6",
+        "@types/node": "^11.11.3",
+        "@types/vscode": "^1.55.0",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
+        "cspell":   "^6.0.0",
+        "eslint":   "^8.14.0",
+        "eslint-plugin-deprecation": "^1.3.2",
+        "eslint-plugin-no-null": "^1.0.2",
+        "markdown-link-check": "^3.10.3",
+        "markdownlint-cli": "^0.31.1",
+        "mocha": "^9.2.2",
+        "nyc": "^15.1.0",
+        "prettier": "^2.6.2",
+        "ts-node": "^10.8.0",
+        "typescript":   "^3.9.3"
+    },
+    "__metadata": {
+        "id":   "2fd22b8e-b3b8-4e7f-9a28-a5e2d1bdd0d4",
+        "publisherDisplayName": "X-Ryl669",
+        "publisherId": "e054f80a-50f9-4d80-85c8-6ff87eef6c35"
+    }
 }
